Add .gitignore file

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN="MTE4MTk2OTAwNDkxOTc5OTg1OQ.GYo_kS.iV4wxuoM40U9pf5x9TGrLYe95cgzlhxYsyMcKY"
+BOT_TOKEN="MTE4MTk2OTAwNDkxOTc5OTg1OQ.Gyd4Af.G3V72HWqWDSL1KpJQBoz7Wczg3RekmgoCM6cQM"
